k8s/recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-backend
spec:
  selector:
    app: recommendation-backend
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
  type: ClusterIP
